# pdf-lite-mcp

./: .dockerignore  .gitignore  AMAZON_Q_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TESTING_GUIDE.md  amazon_q_config.json  manual_test.py  pyproject.toml  requirements.txt  run_server.py  simple_test.py  test_basic.py  test_server.py  test_with_pdf.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py  main.py  models.py  pdf_reader.py  utils.py
tests/: __init__.py  manual_test.py  simple_test.py  test_basic.py  test_server.py  test_with_pdf.py
