[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-reader-mcp"
version = "0.1.0"
description = "A simplified Python MCP server for reading PDF files, optimized for Amazon Q CLI"
authors = [
    {name = "tsaol", email = "tsaol@outlook.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0"
]
keywords = ["mcp", "pdf", "reader", "amazon-q", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/tsaol/pdf-reader-mcp"
Repository = "https://github.com/tsaol/pdf-reader-mcp.git"
Issues = "https://github.com/tsaol/pdf-reader-mcp/issues"

[project.scripts]
pdf-reader-mcp = "src.main:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]