[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-lite-mcp"
version = "1.0.1"
description = "A simplified Python MCP server for reading PDF files, optimized for Amazon Q CLI"
authors = [
    {name = "tsaol", email = "tsaol@outlook.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0"
]
keywords = ["mcp", "pdf", "reader", "amazon-q", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/tsaol/pdf-lite-mcp"
Repository = "https://github.com/tsaol/pdf-lite-mcp.git"
Issues = "https://github.com/tsaol/pdf-lite-mcp/issues"

[project.scripts]
pdf-lite-mcp = "src.main:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]